# HostsMod

./: .gitignore  CMakeLists.txt  HostsMod.sln  HostsMod.vcxproj  README.md  domains.txt  dqw  main.cpp
Debug/: HostsMod.exe.recipe  HostsMod.ilk  HostsMod.vcxproj.FileListAbsolute.txt  vc142.idb
Debug/HostsMod.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  HostsMod.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/: main.cpp
